<resources>
    <string name="app_name">Zoifyllon</string>
    <string name="message_welcome_page">Temukan dan Identifikasi penyakit pada tanaman dengan mudah dan akurat \nmelalui pemindaian gambar</string>
    <string name="title_welcome_page">Selamat datang di \n Zoifyllon!</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_img_desc">Image asset for the login page</string>
    <string name="signup_img_desc">image asset for the sign up page</string>
    <string name="signup_msg">Register Your Account</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="camera_button">Camera button</string>
    <string name="camera_frame">Camera frame</string>
    <string name="camera_display_failure">Failed to display Camera</string>
    <string name="image_capture_failure">Failed to capture image</string>
    <string name="permission_granted">Camera permission granted</string>
    <string name="permission_denied">Camera permission denied</string>
    <string name="capture_button">Capture image button</string>
    <string name="result">Result of the plant detection</string>
    <string name="result_img">Image taken from the photo or gallery</string>
    <string name="hasil_activity">Result Analisis</string>
    <string name="onboard_img_desc">Leaves image for the onboarding page</string>
    <string name="onboard_title_desc" />
    <string name="home_start_scan">Start Scan Here</string>
    <string name="img_splashscreen">img_splashscreen</string>
    <string name="no_media_selected">No media selected</string>
    <string name="flip_camera">Flip</string>

    //detail penyakit

    <string name="penyakit_name">Nama Penyakit</string>
    <string name="description">Deskripsi</string>

    //name+description recycler

    <string-array name="data_name">
        <item>Penyakit Bercak Daun</item>
        <item>Penyakit Bercak Hitam</item>
        <item>Penyakit Layu Fusarium</item>
        <item>Penyakit Busuk Basah</item>
        <item>Penyakit Virus Mosaik</item>
        <item>Penyakit Karat atau Bercak Putih</item>
    </string-array>

    <string-array name="data_description">
        //Penyakit Bercak Daun
        <item>Penyakit bercak daun sering terjadi menyerang tanaman hias, tanda-tandanya berupa bercak kecoklatan pada permukaan daun dan seiring waktu bercaknya semakin besar dan melebar.
            \nTentunya, penyakit ini menggangu tampilan tanaman hias kamu, bukan? Bercak ini bisa terjadi karena tanaman hias terlalu lembab dan menyebabkan jamur.
            \n\nLalu, bagaimana cara mengatasinya?
            \n\nAtasi penyakit bercak daun dengan memangkas bagian daun yang terkena bercak dan semprot dengan cairan fungisida agar tidak menulari tanaman hias lainnya.
        </item>
        //Penyakit Bercak Hitam
        <item>Penyakit bercak hitam juga bisa terjadi pada tanaman hias, hal tersebut dikarenakan tingkat kelembapan yang terlalu tinggi.
            \nTanda-tandanya terlihat bercak hitam pada daun tanaman yang sudah tua. Penyakit ini bisa menyenjalar samapi ke daun muda dan menyebabkan daun menjadi gugur.
            \nBiasanya penyakit bercak hitam menyerang pada tanaman hias yang diletakkan di dalm ruangan, disebabkan karena udara di ruangan sirkulasinya kurang lancar.
            \n\nCara mengatasi penyakit ini, teman-teman bisa mengatur kelembapan dan memperbaiki sirkulasi udara.
            \nPotong juga bagian yang terkena bercak hitam agar tidak menular serta menyemprotkan cairan fungisida.
        </item>
        //Penyakit Layu Fusarium
        <item>Penyakit layu fusarium yang menyerang tanaman hias juga disebabkan karena serangan jamur.
            \nTanda-tandanya, tanaman hias terlihat membusuk pada akar, daun layu dan kuning. Selanjutnya tanaman akan layu seperti tanaman yang kekurangan air.
            \nJika tidak cepat diatasi maka tanaman hias teman-teman akan mati.
            \n\nLalu, bagaimana cara mengatasinya?
            \nCaranya dengan memotong bagian akar yang membusuk lalu semprot dengan cairan fungisida.
            \nNamun, Jika sudah terlihat adanya tanda-tanda tanaman layu karena layu fusarium, maka sebaiknya tanaman tersebut segera dicabut dan kemudian dibakar. Jika perlu, tanah bekas tanaman terserang tersebut juga dapat ikut dibuang atau dapat disemprotkan dengan fungisida kontak berbahan aktif klorotalonil atau tembaga hidroksida. Hal ini dilakukan untuk mencegah penularan yang lebih cepat ke tanaman yang masih sehat.
        </item>
        //Penyakit Busuk Basah
        <item>Penyakit ini disebabkan oleh bakteri Erwinia. Sp  yang menyerang tanaman hias pada musim penghujan.
            \nTanda-tandanya daun tanaman akan menjadi lunak dan berubah warnanya. Lama-kelamaan akan terjadi pembusukan dan baunya tidak sedap.
            \n\nJika kelembapan semakin tinggi, serangan penyakit ini akan semakin tidak terkendali dan menyebar ke tanaman lainnya.
            \nSegera atasi dengan mengurangi penyiraman dan pastikan air tidak sampai menggenang.
        </item>
        //Penyakit Virus Mosaik
        <item>Penyakit ini bisa menyerang jenis tanaman hias apa saja. Tanda-tandanya muncul bercak-bercak pada seluruh bagian permukaan daun dan menyebabkan warnanya tidak rata.
            \nTentunya, hal ini menyebabkan tampilan tanaman hias menjadi tidak menarik karena daun tanaman hias akan menggulung.
            \n\nKarena penyakit  virus mosaik ini sifatnya mudah sekali ditularkan ke tanaman hias lainnya.
            \nAtasi dengan segera memisahkan tanaman hias yang terkena penyakit ini ke tempat lain untuk dibakar.
        </item>
        //Penyakit Karat atau Bercak Putih
        <item>Bercak putih yang muncul di bagian bawah permukaan daun dikenal sebagai gejala karat atau rust. Jika tanaman terserang penyakit ini, akan menyebabkan daun layu, menggulung, mengerut, hingga mengering.
            \nGejala karat timbul karena kondisi udara yang lembap dan dingin, sehingga lebih rawan terjadi di musim hujan.
            \n\nKondisi lembap ini bisa jadi karena letak tanaman berada di bawah ventilasi yang buruk.
            \nJika dibiarkan, kondisi ini akan menyebar pada tanaman lain melalui angin dan air. Jika ini terjadi pada tanaman hiasmu, segera potong atau pangkas bagian daun yang terinfeksi.
        </item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/penyakit_bercak_daun</item>
        <item>@drawable/penyakit_bercak_hitam</item>
        <item>@drawable/penyakit_layu_fusarium</item>
        <item>@drawable/penyakit_busuk_basah</item>
        <item>@drawable/penyakit_virus_mosaik</item>
        <item>@drawable/penyakit_bercak_putih</item>
    </integer-array>

    <integer-array name="data_photobg">
        <item>@drawable/penyakit_bercak_daun</item>
        <item>@drawable/penyakit_bercak_hitam</item>
        <item>@drawable/penyakit_layu_fusarium</item>
        <item>@drawable/penyakit_busuk_basah</item>
        <item>@drawable/penyakit_virus_mosaik</item>
        <item>@drawable/penyakit_bercak_putih</item>
    </integer-array>

</resources>