<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnBoardingActivity">

    <ImageView
        android:id="@+id/backgroundImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/onboard_img_desc"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/leaves"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/titleImg"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_zoifyllon"
        android:contentDescription="@string/onboard_title_desc"
        android:elevation="1dp" />

    <TextView
        android:id="@+id/onboardMsg"
        android:layout_width="374dp"
        android:layout_height="131dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_opacity"
        android:elevation="1dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/message_welcome_page"
        android:textColor="@color/seed"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleImg" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/seed"
        android:elevation="1dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardMsg" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:elevation="1dp"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/seed"
        app:layout_constraintTop_toBottomOf="@id/signupButton" />

</androidx.constraintlayout.widget.ConstraintLayout>